name:                vyom
version:             0.1.0.0
synopsis:            Vyom is an extensible algebra for creating DSLs in Haskell
description:         Vyom is an extensible algebra for creating DSLs in Haskell
homepage:            http://github.com/ajnsit/vyom
license:             MIT
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           Copyright (C) 2015. Anupam Jain. All Rights Reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs   : src
  exposed-modules  : Vyom
                   , Vyom.Term.UnitSym
                   , Vyom.Term.IntSym
                   , Vyom.Term.BoolSym
                   , Vyom.Term.StringSym
                   , Vyom.Term.TupleSym
                   , Vyom.Term.ListSym
                   , Vyom.Term.CondSym
                   , Vyom.Term.LamSym
                   , Vyom.Term.AppSym
                   , Vyom.Term.FixSym
  other-modules    : Vyom.Data.Exp
                   , Vyom.Data.Run
                   , Vyom.Data.Pretty
                   , Vyom.Data.Typ
                   , Vyom.Data.ErrorOr
                   , Vyom.Data.Deserialiser
  build-depends    : base >= 4.7 && < 5
                   , binary
  default-language : Haskell2010

executable vyom
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vyom
  default-language:    Haskell2010

test-suite vyom-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vyom
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/vyom
